--- a/src/main/resources/templates/admin/blogs-input.html
+++ b/src/main/resources/templates/admin/blogs-input.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>博客发布</title>
+  <title>New a blog</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.css">
-  <link rel="stylesheet" href="lib/editormd/css/editormd.min.css">
-  <link rel="stylesheet" href="css/me.css">
+  <link rel="stylesheet" href="/lib/editormd/css/editormd.min.css">
+  <link rel="stylesheet" href="/css/me.css">
 </head>
 <body>
 
@@ -14,19 +14,19 @@
   <nav class="ui inverted attached segment m-padded-tb-mini m-shadow-small" >
     <div class="ui container">
       <div class="ui inverted secondary stackable menu">
-        <h2 class="ui teal header item">管理后台</h2>
-        <a href="#" th:href="@{/admin/blogs}" class="active m-item item m-mobile-hide"><i class=" home icon"></i>博客</a>
-        <a href="#" th:href="@{/admin/types}" class=" m-item item m-mobile-hide"><i class=" idea icon"></i>分类</a>
-        <a href="#" th:href="@{/admin/tags}" class="m-item item m-mobile-hide"><i class=" tags icon"></i>标签</a>
+        <h2 class="ui teal header item">Admin</h2>
+        <a href="#" th:href="@{/admin/blogs}" class="active m-item item m-mobile-hide"><i class=" home icon"></i>Blog</a>
+        <a href="#" th:href="@{/admin/types}" class=" m-item item m-mobile-hide"><i class=" idea icon"></i>Type</a>
+        <a href="#" th:href="@{/admin/tags}" class=" m-item item m-mobile-hide"><i class=" tags icon"></i>Tag</a>
         <div class="right m-item m-mobile-hide menu">
           <div class="ui dropdown  item">
             <div class="text">
-              <img class="ui avatar image" src="https://unsplash.it/100/100?image=1005">
-              Allen
+              <img class="ui avatar image" src="https://unsplash.it/100/100?image=1005" th:src="${session.user.avatar}">
+              <span th:text="${session.user.nickname}"></span>
             </div>
             <i class="dropdown icon"></i>
             <div class="menu">
-              <a href="#" class="item">注销</a>
+              <a href="#" th:href="@{/admin/logout}" class="item">Logout</a>
             </div>
           </div>
         </div>
@@ -39,111 +39,103 @@
   <div class="ui attached pointing menu">
     <div class="ui container">
       <div class="right menu">
-        <a href="#" class="teal active item">发布</a>
-        <a href="#" class="item">列表</a>
+        <a href="#" th:href="@{/admin/blogs/input}" class="teal active item">New</a>
+        <a href="#" th:href="@{/admin/blogs}" class="item">List</a>
       </div>
     </div>
   </div>
 
   <!--中间内容-->
-  <div  class="m-container-small m-padded-tb-big">
+  <div  class="m-container m-padded-tb-big">
     <div class="ui container">
-      <form action="#" method="post" class="ui form">
-
+      <form id="blog-form" action="#" th:object="${blog}" th:action="@{/admin/blogs}" method="post" class="ui form">
+        <input type="hidden" name="publish" th:value="*{publish}">
+        <input type="hidden" name="id" th:value="*{id}">
         <div class="required field">
           <div class="ui left labeled input">
             <div class="ui selection compact teal basic dropdown label">
-              <input type="hidden" value="原创" >
+              <input type="hidden" value="Original" name="flag" th:value="*{flag}" >
               <i class="dropdown icon"></i>
-              <div class="text">原创</div>
+              <div class="text">Original</div>
               <div class="menu">
-                <div class="item" data-value="原创">原创</div>
-                <div class="item" data-value="转载">转载</div>
-                <div class="item" data-value="翻译">翻译</div>
+                <div class="item" data-value="Original">Original</div>
+                <div class="item" data-value="Reprint">Reprint</div>
+                <div class="item" data-value="Translation">Translation</div>
               </div>
             </div>
-            <input type="text" name="title" placeholder="标题">
+            <input type="text" name="title" placeholder="Please input blog title..." th:value="*{title}">
           </div>
         </div>
 
-        <div class="field">
+        <div class="required field">
           <div id="md-content" style="z-index: 1 !important;">
-            <textarea placeholder="博客内容" name="content" style="display: none">
-              [TOC]
-
-#### Disabled options
-
-- TeX (Based on KaTeX);
-- Emoji;
-- Task lists;
-- HTML tags decode;
-- Flowchart and Sequence Diagram;
-            </textarea>
+            <textarea placeholder="Blog content..." name="content" style="display: none" th:text="*{content}"></textarea>
           </div>
         </div>
 
         <div class="two fields">
-          <div class="field">
+          <div class="required field">
             <div class="ui left labeled action input">
-              <label class="ui compact teal basic label">分类</label>
+              <label class="ui compact teal basic label">Type</label>
               <div class="ui fluid selection dropdown">
-                <input type="hidden" name="type">
+                <input type="hidden" name="type.id" th:value="*{type}!=null ? *{type.id}">
                 <i class="dropdown icon"></i>
-                <div class="default text">分类</div>
+                <div class="default text">Type</div>
                 <div class="menu">
-                  <div class="item" data-value="1">错误日志</div>
-                  <div class="item" data-value="2">开发者手册</div>
+                  <div th:each="type : ${types}" class="item" data-value="1" th:data-value="${type.id}" th:text="${type.name}"></div>
                 </div>
               </div>
             </div>
           </div>
-          <div class="field">
+          <div class=" field">
             <div class="ui left labeled action input">
-              <label class="ui compact teal basic label">标签</label>
+              <label class="ui compact teal basic label">Tag</label>
               <div class="ui fluid selection multiple search  dropdown">
-                <input type="hidden" name="tag">
+                <input type="hidden" name="tagIds" th:value="*{tagIds}">
                 <i class="dropdown icon"></i>
-                <div class="default text">标签</div>
+                <div class="default text">Tag</div>
                 <div class="menu">
-                  <div class="item" data-value="1">java</div>
-                  <div class="item" data-value="2">JavaScript</div>
+                  <div th:each="tag : ${tags}" class="item" data-value="1" th:data-value="${tag.id}" th:text="${tag.name}"></div>
                 </div>
               </div>
             </div>
           </div>
         </div>
 
-        <div class="field">
+        <div class="required field">
           <div class="ui left labeled input">
-            <label class="ui teal basic label">首图</label>
-            <input type="text" name="indexPicture" placeholder="首图引用地址">
+            <label class="ui teal basic label">Thumbnail</label>
+            <input type="text" name="thumbnail" th:value="*{thumbnail}" placeholder="Please input thumbnail url...">
           </div>
-
         </div>
+
+        <!--<div class="required field">-->
+          <!--<textarea name="description" th:text="*{description}" placeholder="博客描述..." maxlength="200"></textarea>-->
+        <!--</div>-->
 
         <div class="inline fields">
           <div class="field">
             <div class="ui checkbox">
-              <input type="checkbox" id="recommend" name="recommend" checked class="hidden">
-              <label for="recommend">推荐</label>
+              <input type="checkbox" id="recommend" name="recommend" checked th:checked="*{recommend}" class="hidden">
+              <label for="recommend">Recommend</label>
             </div>
           </div>
           <div class="field">
             <div class="ui checkbox">
-              <input type="checkbox" id="shareInfo" name="shareInfo" class="hidden">
-              <label for="shareInfo">转载声明</label>
+              <input type="checkbox" id="shareStatement" name="copyright" th:checked="*{copyright}" class="hidden">
+              <label for="shareStatement">Reprint Statement</label>
             </div>
           </div>
           <div class="field">
             <div class="ui checkbox">
-              <input type="checkbox" id="appreciation" name="appreciation" class="hidden">
-              <label for="appreciation">赞赏</label>
+              <input type="checkbox" id="appreciation" name="appreciation" th:checked="*{appreciation}" class="hidden">
+              <label for="appreciation">Appreciation</label>
             </div>
           </div>
           <div class="field">
             <div class="ui checkbox">
-              <input type="checkbox" id="comment" name="comment" class="hidden">
-              <label for="comment">评论</label>
+              <input type="checkbox" id="commentabled" name="comment" th:checked="*{comment}" class="hidden">
+              <label for="commentabled">Comment</label>
             </div>
           </div>
         </div>
@@ -151,9 +143,9 @@
         <div class="ui error message"></div>
 
         <div class="ui right aligned container">
-          <button type="button" class="ui button" onclick="window.history.go(-1)" >返回</button>
-          <button class="ui secondary button">保存</button>
-          <button class="ui teal button">发布</button>
+          <button type="button" class="ui button" onclick="window.history.go(-1)" >Cancel</button>
+          <button type="button" id="save-btn" class="ui secondary button">Save</button>
+          <button type="button" id="publish-btn" class="ui teal button">Publish</button>
         </div>
 
       </form>
@@ -169,7 +161,7 @@
         <div class="three wide column">
           <div class="ui inverted link list">
             <div class="item">
-              <img src="images/wechat.jpg" class="ui rounded image" alt="" style="width: 110px">
+              <img src="/images/wechat.jpg" class="ui rounded image" alt="" style="width: 110px">
             </div>
           </div>
         </div>
@@ -199,10 +191,10 @@
 
   </footer>
 
+  <script src="/js/jquery-1.11.0.min.js"></script>
+  <script src="/js/semantic.min.js"></script>
+  <script src="/lib/editormd/editormd.js"></script>
 
-  <script src="lib/editormd/editormd.min.js"></script>
-  <script src="js/jquery-1.11.0.min.js"></script>
-  <script src="js/semantic.min.js"></script>
 
   <script>
 
@@ -213,7 +205,7 @@
         width   : "100%",
         height  : 640,
         syncScrolling : "single",
-        path    : "lib/editormd/lib/"
+        path    : "/lib/editormd/lib/"
       });
     });
     $('.menu.toggle').click(function () {
@@ -224,15 +216,56 @@
       on : 'hover'
     });
 
+    $('#save-btn').click(function () {
+      $('[name="publish"]').val(false);
+      $('#blog-form').submit();
+    });
+
+
+    $('#publish-btn').click(function () {
+      $('[name="publish"]').val(true);
+      $('#blog-form').submit();
+    });
+
+
+
     $('.ui.form').form({
       fields : {
         title : {
           identifier: 'title',
           rules: [{
             type : 'empty',
-            prompt: '标题：请输入博客标题'
+            prompt: 'Please input blog title.'
+          }]
+        },
+        content : {
+          identifier: 'content',
+          rules: [{
+            type : 'empty',
+            prompt: 'Please input blog content.'
+          }]
+        },
+        typeId : {
+          identifier: 'type.id',
+          rules: [{
+            type : 'empty',
+            prompt: 'Please select blog type.'
+          }]
+        },
+        thumbnail : {
+          identifier: 'thumbnail',
+          rules: [{
+            type : 'empty',
+            prompt: 'Please input blog thumbnail url.'
           }]
         }
+        // description : {
+        //   identifier: 'description',
+        //   rules: [{
+        //     type : 'empty',
+        //     prompt: '标题：请输入博客描述'
+        //   }]
+        // }
       }
     });
 
