--- a/src/main/resources/templates/blog.html
+++ b/src/main/resources/templates/blog.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
-<head th:replace="_fragments :: head(~{::title})">
+<head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>博客详情</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.css">
-  <link rel="stylesheet" href="../static/css/typo.css">
-  <link rel="stylesheet" href="../static/css/animate.css">
-  <link rel="stylesheet" href="../static/lib/prism/prism.css">
-  <link rel="stylesheet" href="../static/lib/tocbot/tocbot.css">
-  <link rel="stylesheet" href="../static/css/me.css">
+  <link rel="stylesheet" href="/css/typo.css">
+  <link rel="stylesheet" href="/css/animate.css">
+  <link rel="stylesheet" href="/lib/prism/prism.css">
+  <link rel="stylesheet" href="/lib/tocbot/tocbot.css">
+  <link rel="stylesheet" href="/css/me.css">
 </head>
 <body>
 
   <!--导航-->
-  <nav th:replace="_fragments :: menu(1)"  class="ui inverted attached segment m-padded-tb-mini m-shadow-small" >
+  <nav class="ui inverted attached segment m-padded-tb-mini m-shadow-small" >
     <div class="ui container">
       <div class="ui inverted secondary stackable menu">
         <h2 class="ui teal header item">Blog</h2>
-        <a href="#" class="active m-item item m-mobile-hide"><i class="mini home icon"></i>首页</a>
-        <a href="#" class="m-item item m-mobile-hide"><i class="mini idea icon"></i>分类</a>
-        <a href="#" class="m-item item m-mobile-hide"><i class="mini tags icon"></i>标签</a>
-        <a href="#" class="m-item item m-mobile-hide"><i class="mini clone icon"></i>归档</a>
-        <a href="#" class="m-item item m-mobile-hide"><i class="mini info icon"></i>关于我</a>
+        <a href="#" class="active m-item item m-mobile-hide"><i class=" home icon"></i>首页</a>
+        <a href="#" class="m-item item m-mobile-hide"><i class=" idea icon"></i>分类</a>
+        <a href="#" class="m-item item m-mobile-hide"><i class=" tags icon"></i>标签</a>
+        <a href="#" class="m-item item m-mobile-hide"><i class=" clone icon"></i>归档</a>
+        <a href="#" class="m-item item m-mobile-hide"><i class=" info icon"></i>关于我</a>
         <div class="right m-item item m-mobile-hide">
           <div class="ui icon inverted transparent input m-margin-tb-tiny">
             <input type="text" placeholder="Search....">
@@ -49,18 +49,18 @@
             <i class="calendar icon"></i> <span th:text="${#dates.format(blog.updateTime,'yyyy-MM-dd')}">2017-10-01</span>
           </div>
           <div class="item">
-            <i class="eye icon"></i> <span th:text="${blog.views}">2342</span>
+            <i class="eye icon"></i> <span th:text="${blog.views}"></span>
           </div>
         </div>
       </div>
       <div class="ui attached segment">
         <!--图片区域-->
-        <img src="https://unsplash.it/800/450?image=1005" th:src="@{${blog.firstPicture}}" alt="" class="ui fluid rounded image">
+        <img src="https://unsplash.it/800/450?image=1005" th:src="@{${blog.thumbnail}}" alt="" class="ui fluid rounded image">
       </div>
       <div class="ui  attached padded segment">
         <!--内容-->
         <div class="ui right aligned basic segment">
-          <div class="ui orange basic label" th:text="${blog.flag}">原创</div>
+          <div class="ui orange basic label" th:text="${blog.flag}"></div>
         </div>
 
         <h2 class="ui center aligned header" th:text="${blog.title}">关于刻意练习的清单</h2>
@@ -456,7 +456,7 @@ h5,h6{font-size:1em;}
         </div>
 
       </div>
-      <div class="ui attached positive message" th:if="${blog.shareStatement}">
+      <div class="ui attached positive message" th:if="${blog.copyright}">
         <!--博客信息-->
         <div class="ui middle aligned grid">
           <div class="eleven wide column">
@@ -472,7 +472,7 @@ h5,h6{font-size:1em;}
           </div>
         </div>
       </div>
-      <div  class="ui bottom attached segment" th:if="${blog.commentabled}">
+      <div  class="ui bottom attached segment" th:if="${blog.comment}">
         <!--留言区域列表-->
         <div id="comment-container"  class="ui teal segment">
           <div th:fragment="commentList">
@@ -590,13 +590,13 @@ h5,h6{font-size:1em;}
             <div class="field m-mobile-wide m-margin-bottom-small">
               <div class="ui left icon input">
                 <i class="user icon"></i>
-                <input type="text" name="nickname" placeholder="姓名" th:value="${session.user}!=null ? ${session.user.nickname}">
+                <input type="text" name="nickname" placeholder="Name" th:value="${session.user}!=null ? ${session.user.nickname}">
               </div>
             </div>
             <div class="field m-mobile-wide m-margin-bottom-small">
               <div class="ui left icon input">
                 <i class="mail icon"></i>
-                <input type="text" name="email" placeholder="邮箱" th:value="${session.user}!=null ? ${session.user.email}">
+                <input type="text" name="email" placeholder="Email" th:value="${session.user}!=null ? ${session.user.email}">
               </div>
             </div>
             <div class="field  m-margin-bottom-small m-mobile-wide">
@@ -633,13 +633,13 @@ h5,h6{font-size:1em;}
   <br>
   <br>
   <!--底部footer-->
-  <footer th:replace="_fragments :: footer" class="ui inverted vertical segment m-padded-tb-massive">
+  <footer class="ui inverted vertical segment m-padded-tb-massive">
     <div class="ui center aligned container">
       <div class="ui inverted divided stackable grid">
         <div class="three wide column">
           <div class="ui inverted link list">
             <div class="item">
-              <img src="../static/images/wechat.jpg" class="ui rounded image" alt="" style="width: 110px">
+              <img src="/images/wechat.jpg" class="ui rounded image" alt="" style="width: 110px">
             </div>
           </div>
         </div>
@@ -669,16 +669,14 @@ h5,h6{font-size:1em;}
 
   </footer>
 
-  <!--/*/<th:block th:replace="_fragments :: script">/*/-->
-<script src="https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js"></script>
-<script src="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.js"></script>
-<script src="//cdn.jsdelivr.net/npm/jquery.scrollto@2.1.2/jquery.scrollTo.min.js"></script>
-  
-<script src="../static/lib/prism/prism.js"></script>
-<script src="../static/lib/tocbot/tocbot.min.js"></script>
-<script src="../static/lib/qrcode/qrcode.min.js"></script>
-<script src="../static/lib/waypoints/jquery.waypoints.min.js"></script>
-  <!--/*/</th:block>/*/-->
+  <script src="/js/jquery-1.11.0.min.js"></script>
+  <script src="/js/semantic.min.js"></script>
+  <script src="/js/jquery.scrollTo.min.js"></script>
+  <script src="/lib/prism/prism.js"></script>
+  <script src="/lib/tocbot/tocbot.min.js"></script>
+  <script src="/lib/qrcode/qrcode.min.js"></script>
+  <script src="/lib/waypoints/jquery.waypoints.min.js"></script>
+
 
 
   <script th:inline="javascript">
