--- a/src/main/resources/templates/blog.html
+++ b/src/main/resources/templates/blog.html
@@ -484,14 +484,13 @@ h5,h6{font-size:1em;}
                 </a>
                 <div class="content">
                   <a class="author" >
-                    <span th:text="${comment.nickname}">Matt</span>
-                    <div class="ui mini basic teal left pointing label m-padded-mini" th:if="${comment.adminComment}">博主</div>
+                    <span th:text="${comment.nickname}"></span>
+                    <!--<div class="ui mini basic teal left pointing label m-padded-mini" th:if="${comment.adminComment}">博主</div>-->
                   </a>
                   <div class="metadata">
-                    <span class="date" th:text="${#dates.format(comment.createTime,'yyyy-MM-dd HH:mm')}">Today at 5:42PM</span>
+                    <span class="date" th:text="${#dates.format(comment.createTime,'yyyy-MM-dd HH:mm')}"></span>
                   </div>
                   <div class="text" th:text="${comment.content}">
-                    How artistic!
                   </div>
                   <div class="actions">
                     <a class="reply" data-commentid="1" data-commentnickname="Matt" th:attr="data-commentid=${comment.id},data-commentnickname=${comment.nickname}" onclick="reply(this)">回复</a>
@@ -521,68 +520,13 @@ h5,h6{font-size:1em;}
                   </div>
                 </div>
               </div>
-              <!--/*-->
-              <div class="comment">
-                <a class="avatar">
-                  <img src="https://unsplash.it/100/100?image=1005">
-                </a>
-                <div class="content">
-                  <a class="author">Elliot Fu</a>
-                  <div class="metadata">
-                    <span class="date">Yesterday at 12:30AM</span>
-                  </div>
-                  <div class="text">
-                    <p>This has been very useful for my research. Thanks as well!</p>
-                  </div>
-                  <div class="actions">
-                    <a class="reply">回复</a>
-                  </div>
-                </div>
-                <div class="comments">
-                  <div class="comment">
-                    <a class="avatar">
-                      <img src="https://unsplash.it/100/100?image=1005">
-                    </a>
-                    <div class="content">
-                      <a class="author">Jenny Hess</a>
-                      <div class="metadata">
-                        <span class="date">Just now</span>
-                      </div>
-                      <div class="text">
-                        Elliot you are always so right :)
-                      </div>
-                      <div class="actions">
-                        <a class="reply">回复</a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="comment">
-                <a class="avatar">
-                  <img src="https://unsplash.it/100/100?image=1005">
-                </a>
-                <div class="content">
-                  <a class="author">Joe Henderson</a>
-                  <div class="metadata">
-                    <span class="date">5 days ago</span>
-                  </div>
-                  <div class="text">
-                    Dude, this is awesome. Thanks so much
-                  </div>
-                  <div class="actions">
-                    <a class="reply">回复</a>
-                  </div>
-                </div>
-              </div>
-              <!--*/-->
 
             </div>
           </div>
         </div>
         <div id="comment-form" class="ui form">
+          <input type="hidden" name="parentComment.id" value="-1" >
           <input type="hidden" name="blog.id" th:value="${blog.id}">
-          <input type="hidden" name="parentComment.id" value="-1">
           <div class="field">
             <textarea name="content" placeholder="请输入评论信息..."></textarea>
           </div>
@@ -800,7 +744,7 @@ h5,h6{font-size:1em;}
 
     function clearContent() {
       $("[name='content']").val('');
-      $("[name='parentComment.id']").val(-1);
+      $("[name='parentComment.id']").val('-1');
       $("[name='content']").attr("placeholder", "请输入评论信息...");
     }
 
