--- a/src/main/resources/templates/blog.html
+++ b/src/main/resources/templates/blog.html
@@ -485,7 +485,7 @@ h5,h6{font-size:1em;}
                 <div class="content">
                   <a class="author" >
                     <span th:text="${comment.nickname}"></span>
-                    <!--<div class="ui mini basic teal left pointing label m-padded-mini" th:if="${comment.adminComment}">博主</div>-->
+                    <div class="ui mini basic teal left pointing label m-padded-mini" th:if="${comment.adminComment}">admin</div>
                   </a>
                   <div class="metadata">
                     <span class="date" th:text="${#dates.format(comment.createTime,'yyyy-MM-dd HH:mm')}"></span>
@@ -504,7 +504,7 @@ h5,h6{font-size:1em;}
                     <div class="content">
                       <a class="author" >
                         <span th:text="${reply.nickname}">小红</span>
-                        <div class="ui mini basic teal left pointing label m-padded-mini" th:if="${reply.adminComment}">博主</div>
+                        <div class="ui mini basic teal left pointing label m-padded-mini" th:if="${reply.adminComment}">admin</div>
                         &nbsp;<span th:text="|@ ${reply.parentComment.nickname}|" class="m-teal">@ 小白</span>
                       </a>
                       <div class="metadata">
