--- a/src/main/resources/templates/types.html
+++ b/src/main/resources/templates/types.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
-<head th:replace="_fragments :: head(~{::title})">
+<head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>分类</title>
+  <title>Types</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.css">
-  <link rel="stylesheet" href="../static/css/me.css">
+  <link rel="stylesheet" href="/css/me.css">
 </head>
 <body>
 
   <!--导航-->
-  <nav  th:replace="_fragments :: menu(2)" class="ui inverted attached segment m-padded-tb-mini m-shadow-small" >
+  <nav class="ui inverted attached segment m-padded-tb-mini m-shadow-small" >
     <div class="ui container">
       <div class="ui inverted secondary stackable menu">
         <h2 class="ui teal header item">Blog</h2>
-        <a href="#" class=" m-item item m-mobile-hide"><i class="mini home icon"></i>首页</a>
-        <a href="#" class="active m-item item m-mobile-hide"><i class="mini idea icon"></i>分类</a>
-        <a href="#" class="m-item item m-mobile-hide"><i class="mini tags icon"></i>标签</a>
-        <a href="#" class="m-item item m-mobile-hide"><i class="mini clone icon"></i>归档</a>
-        <a href="#" class="m-item item m-mobile-hide"><i class="mini info icon"></i>关于我</a>
+        <a href="#" class=" m-item item m-mobile-hide"><i class=" home icon"></i>首页</a>
+        <a href="#" class="active m-item item m-mobile-hide"><i class=" idea icon"></i>分类</a>
+        <a href="#" class="m-item item m-mobile-hide"><i class=" tags icon"></i>标签</a>
+        <a href="#" class="m-item item m-mobile-hide"><i class=" clone icon"></i>归档</a>
+        <a href="#" class="m-item item m-mobile-hide"><i class=" info icon"></i>关于我</a>
         <div class="right m-item item m-mobile-hide">
           <div class="ui icon inverted transparent input m-margin-tb-tiny">
             <input type="text" placeholder="Search....">
@@ -59,7 +59,7 @@
           <div class="ui middle aligned mobile reversed stackable grid" >
             <div class="eleven wide column">
               <h3 class="ui header" ><a href="#" th:href="@{/blog/{id}(id=${blog.id})}" target="_blank" class="m-black" th:text="${blog.title}">你真的理解什么是财富自由吗?</a></h3>
-              <p class="m-text" th:text="|${blog.description}......|">正确做好任何一件事情的前提是清晰、正确的理解目标。而事实是，我们很多人很多时候根本没有对目标正确的定义，甚至根本从来就没有想过，只是大家都那么做而已…...</p>
+              <p class="m-text" th:text="|${blog.content}......|">正确做好任何一件事情的前提是清晰、正确的理解目标。而事实是，我们很多人很多时候根本没有对目标正确的定义，甚至根本从来就没有想过，只是大家都那么做而已…...</p>
               <div class="ui grid">
                 <div class="eleven wide column">
                   <div class="ui mini horizontal link list">
@@ -83,7 +83,7 @@
 
             <div class="five wide column">
               <a href="#" th:href="@{/blog/{id}(id=${blog.id})}" target="_blank">
-                <img src="https://unsplash.it/800/450?image=1005" th:src="@{${blog.firstPicture}}"  alt="" class="ui rounded image">
+                <img src="https://unsplash.it/800/450?image=1005" th:src="@{${blog.thumbnail}}"  alt="" class="ui rounded image">
               </a>
             </div>
 
@@ -109,13 +109,13 @@
   <br>
   <br>
   <!--底部footer-->
-  <footer  th:replace="_fragments :: footer" class="ui inverted vertical segment m-padded-tb-massive">
+  <footer class="ui inverted vertical segment m-padded-tb-massive">
     <div class="ui center aligned container">
       <div class="ui inverted divided stackable grid">
         <div class="three wide column">
           <div class="ui inverted link list">
             <div class="item">
-              <img src="../static/images/wechat.jpg" class="ui rounded image" alt="" style="width: 110px">
+              <img src="/images/wechat.jpg" class="ui rounded image" alt="" style="width: 110px">
             </div>
           </div>
         </div>
@@ -144,10 +144,9 @@
     </div>
 
   </footer>
-  <!--/*/<th:block th:replace="_fragments :: script">/*/-->
-<script src="https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js"></script>
-<script src="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.js"></script>
-  <!--/*/</th:block>/*/-->
+
+  <script src="/js/jquery-1.11.0.min.js"></script>
+  <script src="/js/semantic.min.js"></script>
 
   <script>
     $('.menu.toggle').click(function () {
